compiler/typ/tests/fixtures/diagnostics/0370_external_identity_use_mismatch_05.ml.infer.expected
File "0370_external_identity_use_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0370_external_identity_use_mismatch_05 is not a valid module name.

File "0370_external_identity_use_mismatch_05.ml", line 2, characters 19-23:
2 | let _ = id_epsilon true
                       ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
